--- a/product-ms.yml
+++ b/product-ms.yml
@@ -1,8 +1,14 @@
 spring:
   application:
     name: ProductMs
+
 server:
   port: 8083
+
+product:
+  service:
+    message: "Bienvenue dans ProductMS !"
+
 eureka:
   client:
     service-url:
